# swagger.json
@@ -740,6 +740,40 @@
           }
         }
       },
+      "patch": {
+        "summary": "Atualizar justificativa",
+        "description": "Essa rota sera responsavel por atualizar uma justificativa de uma questão",
+        "tags": ["Justification"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "id da justificativa para atualizar",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/JustificationQuestion"
+              },
+              "examples": {
+                "justification": {
+                  "value": {
+                    "justification": "Aqui vai ficar a justificativa da nota da questão"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
       "delete": {
         "summary": "Deletar justificativa",
         "description": "Essa rota sera responsavel por deletar uma justificativa de uma questão",
